# covr

./: .env.example  .env.template  .gitignore  README.md  pyproject.toml
chromadb/: docker-compose.yml
infra/local/: docker-compose.yml
local/: docker-compose.yml  localstack-setup.sh
local/aws-config/: config  credentials
src/covr/: __main__.py  main.py
src/covr/components/: cli.py  database.py  document_parser.py  embeddings.py  environment.py  pdf_parser.py  query_executor.py
src/covr/components/aws/: constants.py
src/covr/components/bot/: bot.py  config.json  config.py  constants.py
src/covr/components/chromadb/: constants.py  db.py
src/covr/components/handlers/: query.py  upload.py  upload_files.py
src/covr/components/langchain/: constants.py  embeddings.py  generator.py  text_splitter.py  vector_store.py
src/covr/components/resume/: parser.py  queue.py  uploader.py
src/covr/components/resume_parser/: constants.py  queue.py
src/covr/components/utils/: database.py  file_utils.py
