[tool.poetry]
name = "covr"
version = "0.1.0"
description = ""
authors = ["Banerjee Aditya <aditya.banerjee@activate.sg>"]
readme = "README.md"
packages = [{include = "covr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.25.0"
python-dotenv = "^1.0.1"
pymupdf = "^1.25.1"
boto3 = "^1.35.90"
chromadb = "^0.5.23"
langchain = "^0.3.13"
langchain-community = "^0.3.13"
sentence-transformers = "^3.3.1"
langchain-chroma = "^0.1.4"
langchain-huggingface = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
