[project]
name = "covr"
version = "0.1.0"
description = ""
authors = [
    {name = "Aditya Banerjee",email = "aditya_banerjee@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "pymupdf (>=1.25.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "covr", from = "src"}]

[tool.poetry.scripts]
covr = "covr.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
