[project]
name = "covr"
version = "0.1.0"
description = ""
authors = [
    {name = "Aditya Banerjee",email = "aditya_banerjee@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "pypdf (>=5.3.0,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
]

[tool.poetry]
packages = [{include = "covr", from = "src"}]

[tool.poetry.scripts]
covr = "covr.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
